[package]
name = "leetcode_solvers"
version = "0.1.0"
edition = "2021"

[dependencies]
html2md = "0.2.14"
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1"
serde_derive = "1.0.210"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
